components/emqx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-mqtt-ws
  namespace: emqx
  annotations:
    higress.io/upstream-read-timeout: "3600"
spec:
  ingressClassName: higress
  rules:
    - http:
        paths:
          - backend:
              service:
                name: emqx-nodeport
                port:
                  number: 8083
            path: /mqtt
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: emqx
  annotations:
    higress.io/domain: emqx.nhome.local
spec:
  ingressClassName: higress
  rules:
    - host: emqx.nhome.local
      http:
        paths:
          - backend:
              service:
                name: emqx-nodeport
                port:
                  number: 18083
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-prod-dashboard
  namespace: emqx
  annotations:
    higress.io/domain: emqx-prod.nhome.local
spec:
  ingressClassName: higress
  rules:
    - host: emqx-prod.nhome.local
      http:
        paths:
          - backend:
              service:
                name: emqx-prod-nodeport
                port:
                  number: 18083
            path: /
            pathType: Prefix
